--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@egjs/vue3-flicking": "^4.10.5",
     "axios": "^1.2.3",
     "bootstrap": "^5.2.3",
     "gsap": "file:gsap-bonus.tgz",
